name: "compcert"
version: "3.5"
opam-version: "2.0"
synopsis: "Extraction of a useful fragment of CompCert for Gillian-C"
description: """
"""
homepage:"https://compcert.org/"
bug-reports:""
maintainer: ["Sacha Ayoun <sachaayoun@gmail.com>"]
authors: [
  "Sacha Ayoun <sachaayoun@gmail.com>"
]
license: "No"
depends: [
  "menhir" {< "20200123" }
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.0"}
]
build: [
  ["./configure" "--ignore-coq" "x86_64-macosx"]
  [make "compcert.ini"]
  ["cp" "compcert.ini" "customlib/compcert.ini"]
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
  ]
]
